--- a/DoctorWebASP/Views/Calendarios/Index.cshtml
+++ b/DoctorWebASP/Views/Calendarios/Index.cshtml
@@ -14,6 +14,8 @@
                     </div>
                     <div class="box-body">
                         <!-- the events -->
+                        @using (Html.BeginForm("Create","Calendarios", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        {
                         <form id="añadirCalendario">
                             <h5>Fecha de inicio:</h5>
                             <input type="datetime-local" name="fechaI" /><br/>
@@ -21,6 +23,7 @@
                             <input type="datetime-local" name="fechaF" /><br/><br/>
                             <input class="btn btn-primary" type="submit" value="Añadir" />
                         </form>
+                        }
                     </div>
                     <!-- /.box-body -->
                 </div>
