Propuesta de objeto de resultado

--- a/DoctorWebASP/Views/Reportes/Index.cshtml
+++ b/DoctorWebASP/Views/Reportes/Index.cshtml
@@ -38,7 +38,7 @@
                 <!-- Reporte #3: Promedio de citas por médico. -->
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="info-box">
-                        <span class="info-box-icon bg-blue"><i class="fa fa-stethoscope"></i> </i></span>
+                        <span class="info-box-icon bg-blue"><i class="fa fa-stethoscope"></i></span>
 
                         <div class="info-box-content">
                             <span class="info-box-text">Promedio de citas por médico.</span>
