--- a/DoctorWebASP/Views/Shared/_Layout.cshtml
+++ b/DoctorWebASP/Views/Shared/_Layout.cshtml
@@ -124,6 +124,34 @@
                             </li>
                         </ul>
                     </li>
+                    <!--Modulo de Historial Medico -->
+                    <li class="treeview">
+                        <a href="#">
+                            <i class="fa fa-ambulance"></i> <span>Historial Medico</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li class="active">
+                                <a href="/HistoriaMedicas/Inicio">
+                                    <i class="fa fa-arrow-circle-right"></i> <span>Entrar</span>
+                                </a>
+                            </li>
+                           
+                        </ul>
+                    </li>
+
+
+
+
+
+
+
+
+
+                    <!--Cierre de Modulo-->
+
                     <li class="treeview">
                         <a href="/Calendarios/Index">
                             <i class="fa fa-calendar"></i> <span>Calendario</span>
