--- a/DoctorWebASP/Views/Citas/SeleccionarEspecialidad.cshtml
+++ b/DoctorWebASP/Views/Citas/SeleccionarEspecialidad.cshtml
@@ -17,7 +17,7 @@
 </section>
 
 <section class="content">
-    <div class="box">
+    <div class="box box-success">
         <div class="box-header with-border">
             <h3 class="box-title">Seleccione el medico que desea para su consulta medica</h3>
         </div>
