--- a/DoctorWebASP/Views/Citas/SeleccionarHorario.cshtml
+++ b/DoctorWebASP/Views/Citas/SeleccionarHorario.cshtml
@@ -1,5 +1,5 @@
 ﻿@using PagedList.Mvc
-@model DoctorWebASP.ViewModels.CitaViewModel
+@model DoctorWebASP.ViewModels.CalendarioViewModel
 
 @{
     ViewBag.Title = "SeleccionarHorario";
@@ -18,7 +18,7 @@
 </section>
 
 <section class="content">
-    <div class="box">
+    <div class="box box-success">
         <div class="box-header with-border">
             <h3 class="box-title">Seleccione la fecha en la que desea generar su cita</h3>
         </div>
