--- a/DoctorWebASP/Views/Citas/SeleccionarMedico.cshtml
+++ b/DoctorWebASP/Views/Citas/SeleccionarMedico.cshtml
@@ -16,7 +16,7 @@
 </section>
 
 <section class="content">
-    <div class="box">
+    <div class="box box-success">
         <div class="box-header with-border">
             <h3 class="box-title">Seleccione el medico con el cual desea generar la cita</h3>
         </div>
