--- a/DoctorWebASP/Views/Citas/SolicitarCita.cshtml
+++ b/DoctorWebASP/Views/Citas/SolicitarCita.cshtml
@@ -16,7 +16,7 @@
 </section>
 
 <section class="content">
-    <div class="box">
+    <div class="box box-success">
         <div class="box-header with-border">
             <h3 class="box-title">Seleccione el centro medico donde desee solicitar cita</h3>
         </div>
