--- a/DoctorWebASP/Views/Reportes/Index.cshtml
+++ b/DoctorWebASP/Views/Reportes/Index.cshtml
@@ -54,7 +54,7 @@
 
                         <div class="info-box-content">
                             <span class="info-box-text">Promedio uso a la aplicación.</span>
-                            <span class="info-box-number"><small>El promedio es de:</small>#</span>
+                            <span class="info-box-number"><small>El promedio es de: </small>@Model.promedioUsoApp</span>
                         </div>
                     </div>
                 </div>
