--- a/DoctorWebASP/Views/Calendarios/Create.cshtml
+++ b/DoctorWebASP/Views/Calendarios/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Añadir bloque de tiempo para citas</h2>
 
 
 @using (Html.BeginForm()) 
@@ -17,7 +17,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.HoraInicio, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-4">
                 @Html.EditorFor(model => model.HoraInicio, new { htmlAttributes = new { @class = "form-control", @type = "datetime-local"} })
                 @Html.ValidationMessageFor(model => model.HoraInicio, "", new { @class = "text-danger" })
             </div>
@@ -31,7 +31,7 @@
 }
 
 <div>
-    <a href="Index">Back to Calendarios</a>
+    <a href="Index"><input type="button" class="btn btn-primary" value="Regresar" /></a>
 </div>
 
 @section Scripts {
