--- a/DoctorWebASP/Views/Shared/_Layout.cshtml
+++ b/DoctorWebASP/Views/Shared/_Layout.cshtml
@@ -97,14 +97,37 @@
 
                         <!-- =============================================== -->
                         <!-- Aqui van las siguientes opciones del menu -->
-                    <li class="treeview">
+                    <li class="treeview @Html.AgregarClaseSi(ViewData.esPaginaActual(MenuPaginas.administracion), "active")">
+                        <a href="#">
+                            <i class="fa fa-list-alt"></i> <span>Admin de Usuarios</span>  <!-- cambiar el menu de pagina a admin de usuarios-->
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+
+                        <ul class="treeview-menu">
+                            <li class="active">
+                                <a href="/AdmUsuario/admrol">
+                                    <i class="fa fa-pencil-square-o"></i> <span>Gestionar Permiso</span>
+                                </a>
+                            </li>
+                            <li class="active">
+                                <a href="/AdmUsuario/admperfil">
+                                    <i class="fa fa-pencil-square-o"></i> <span>Gestionar Perfiles</span>
+                                </a>
+                            </li>
+                        </ul>
+
+
+
+                      <li class="treeview">
                         <a href="/People/Index">
                             <i class="fa fa-address-card"></i> <span>Perfil de Usuario</span>
                             <span class="pull-right-container">
                                 <i class="fa fa-angle-left pull-right"></i>
                             </span>
                         </a>
-                    <li class="treeview @Html.AgregarClaseSi(ViewData.esPaginaActual(MenuPaginas.Reportes) || ViewData.esPaginaActual(MenuPaginas.Configurados), "active")">
+                    <li class="treeview @Html.AgregarClaseSi(ViewData.esPaginaActual(MenuPaginas.Reportes), "active")">
                         <a href="#">
                             <i class="fa fa-list-alt"></i> <span>Reportes</span>
                             <span class="pull-right-container">
@@ -117,41 +140,13 @@
                                     <i class="fa fa-table"></i> <span>Preestablecidos</span>
                                 </a>
                             </li>
-                            <li class="@Html.AgregarClaseSi(ViewData.esPaginaActual(MenuPaginas.Configurados), "active")">
-                                <a href="@Url.Action("Configurados", "Reportes")">
+                            <li class="">
+                                <a href="#">
                                     <i class="fa fa-cog"></i> <span>Configurados</span>
                                 </a>
                             </li>
                         </ul>
                     </li>
-                    <!--Modulo de Historial Medico -->
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-ambulance"></i> <span>Historial Medico</span>
-                            <span class="pull-right-container">
-                                <i class="fa fa-angle-left pull-right"></i>
-                            </span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li class="active">
-                                <a href="/HistoriaMedicas/Inicio">
-                                    <i class="fa fa-arrow-circle-right"></i> <span>Entrar</span>
-                                </a>
-                            </li>
-                           
-                        </ul>
-                    </li>
-
-
-
-
-
-
-
-
-
-                    <!--Cierre de Modulo-->
-
                     <li class="treeview">
                         <a href="/Calendarios/Index">
                             <i class="fa fa-calendar"></i> <span>Calendario</span>
