--- a/DoctorWebASP/Views/Calendarios/Index.cshtml
+++ b/DoctorWebASP/Views/Calendarios/Index.cshtml
@@ -10,61 +10,15 @@
             <div class="col-md-3">
                 <div class="box box-solid">
                     <div class="box-header with-border">
-                        <h4 class="box-title">Draggable Events</h4>
+                        <h4 class="box-title">Eventos disponibles</h4>
                     </div>
                     <div class="box-body">
                         <!-- the events -->
                         <div id="external-events">
-                            <div class="external-event bg-green">Lunch</div>
-                            <div class="external-event bg-yellow">Go home</div>
-                            <div class="external-event bg-aqua">Do homework</div>
-                            <div class="external-event bg-light-blue">Work on UI design</div>
-                            <div class="external-event bg-red">Sleep tight</div>
-                            <div class="checkbox">
-                                <label for="drop-remove">
-                                    <input type="checkbox" id="drop-remove">
-                                    remove after drop
-                                </label>
-                            </div>
+                            <div class="external-event bg-green">Tiempo disponible para citas</div>
                         </div>
                     </div>
                     <!-- /.box-body -->
-                </div>
-                <!-- /. box -->
-                <div class="box box-solid">
-                    <div class="box-header with-border">
-                        <h3 class="box-title">Create Event</h3>
-                    </div>
-                    <div class="box-body">
-                        <div class="btn-group" style="width: 100%; margin-bottom: 10px;">
-                            <!--<button type="button" id="color-chooser-btn" class="btn btn-info btn-block dropdown-toggle" data-toggle="dropdown">Color <span class="caret"></span></button>-->
-                            <ul class="fc-color-picker" id="color-chooser">
-                                <li><a class="text-aqua" href="#"><i class="fa fa-square"></i></a></li>
-                                <li><a class="text-blue" href="#"><i class="fa fa-square"></i></a></li>
-                                <li><a class="text-light-blue" href="#"><i class="fa fa-square"></i></a></li>
-                                <li><a class="text-teal" href="#"><i class="fa fa-square"></i></a></li>
-                                <li><a class="text-yellow" href="#"><i class="fa fa-square"></i></a></li>
-                                <li><a class="text-orange" href="#"><i class="fa fa-square"></i></a></li>
-                                <li><a class="text-green" href="#"><i class="fa fa-square"></i></a></li>
-                                <li><a class="text-lime" href="#"><i class="fa fa-square"></i></a></li>
-                                <li><a class="text-red" href="#"><i class="fa fa-square"></i></a></li>
-                                <li><a class="text-purple" href="#"><i class="fa fa-square"></i></a></li>
-                                <li><a class="text-fuchsia" href="#"><i class="fa fa-square"></i></a></li>
-                                <li><a class="text-muted" href="#"><i class="fa fa-square"></i></a></li>
-                                <li><a class="text-navy" href="#"><i class="fa fa-square"></i></a></li>
-                            </ul>
-                        </div>
-                        <!-- /btn-group -->
-                        <div class="input-group">
-                            <input id="new-event" type="text" class="form-control" placeholder="Event Title">
-
-                            <div class="input-group-btn">
-                                <button id="add-new-event" type="button" class="btn btn-primary btn-flat">Add</button>
-                            </div>
-                            <!-- /btn-group -->
-                        </div>
-                        <!-- /input-group -->
-                    </div>
                 </div>
             </div>
             <!-- /.col -->
@@ -122,65 +76,84 @@
         m = date.getMonth(),
         y = date.getFullYear();
     $('#calendar').fullCalendar({
+        defaultView: 'agendaWeek',
+        columnFormat: {
+            month: 'ddd',   
+            week: 'ddd D/M', 
+            day: 'dddd D/M'  
+        },
+        monthNames: ['Enero','Febrero','Marzo','Abril','Mayo','Junio','Julio','Agosto','Septiembre','Octubre','Noviembre','Diciembre'],
+        monthNamesShort: ['Ene','Feb','Mar','Abr','May','Jun','Jul','Ago','Sep','Oct','Nov','Dic'],
+        dayNames: ['Domingo','Lunes','Martes','Miércoles','Jueves','Viernes','Sábado'],
+        dayNamesShort: ['Dom', 'Lun', 'Mar', 'Mié', 'Jue', 'Vie', 'Sáb'],
+        allDayText: 'Todo el día',
+        weekNumberTitle: 'Sem ',
+
+        firstDay: 1,
       header: {
         left: 'prev,next today',
         center: 'title',
         right: 'month,agendaWeek,agendaDay'
       },
       buttonText: {
-        today: 'today',
-        month: 'month',
-        week: 'week',
-        day: 'day'
+        today: 'hoy',
+        month: 'mes',
+        week: 'semana',
+        day: 'día',
       },
       //Random default events
       events: [
-        {
-          title: 'All Day Event',
-          start: new Date(y, m, 1),
-          backgroundColor: "#f56954", //red
-          borderColor: "#f56954" //red
-        },
-        {
-          title: 'Long Event',
-          start: new Date(y, m, d - 5),
-          end: new Date(y, m, d - 2),
-          backgroundColor: "#f39c12", //yellow
-          borderColor: "#f39c12" //yellow
-        },
-        {
-          title: 'Meeting',
-          start: new Date(y, m, d, 10, 30),
-          allDay: false,
-          backgroundColor: "#0073b7", //Blue
-          borderColor: "#0073b7" //Blue
-        },
-        {
-          title: 'Lunch',
-          start: new Date(y, m, d, 12, 0),
-          end: new Date(y, m, d, 14, 0),
-          allDay: false,
-          backgroundColor: "#00c0ef", //Info (aqua)
-          borderColor: "#00c0ef" //Info (aqua)
-        },
-        {
-          title: 'Birthday Party',
-          start: new Date(y, m, d + 1, 19, 0),
-          end: new Date(y, m, d + 1, 22, 30),
-          allDay: false,
-          backgroundColor: "#00a65a", //Success (green)
-          borderColor: "#00a65a" //Success (green)
-        },
-        {
-          title: 'Click for Google',
-          start: new Date(y, m, 28),
-          end: new Date(y, m, 29),
-          url: 'http://google.com/',
-          backgroundColor: "#3c8dbc", //Primary (light-blue)
-          borderColor: "#3c8dbc" //Primary (light-blue)
-        }
+            
+            /*
+            {
+              title: 'All Day Event',
+              start: new Date(y, m, 1),
+              backgroundColor: "#f56954", //red
+              borderColor: "#f56954" //red
+            },
+            {
+              title: 'Long Event',
+              start: new Date(y, m, d - 5),
+              end: new Date(y, m, d - 2),
+              backgroundColor: "#f39c12", //yellow
+              borderColor: "#f39c12" //yellow
+            },
+            {
+              title: 'Meeting',
+              start: new Date(y, m, d, 10, 30),
+              allDay: false,
+              backgroundColor: "#0073b7", //Blue
+              borderColor: "#0073b7" //Blue
+            },
+            {
+              title: 'Lunch',
+              start: new Date(y, m, d, 12, 0),
+              end: new Date(y, m, d, 14, 0),
+              allDay: false,
+              backgroundColor: "#00c0ef", //Info (aqua)
+              borderColor: "#00c0ef" //Info (aqua)
+            },
+            {
+              title: 'Birthday Party',
+              start: new Date(y, m, d + 1, 19, 0),
+              end: new Date(y, m, d + 1, 22, 30),
+              allDay: false,
+              backgroundColor: "#00a65a", //Success (green)
+              borderColor: "#00a65a" //Success (green)
+            },
+            {
+              title: 'Click for Google',
+              start: new Date(y, m, 28),
+              end: new Date(y, m, 29),
+              url: 'http://google.com/',
+              backgroundColor: "#3c8dbc", //Primary (light-blue)
+              borderColor: "#3c8dbc" //Primary (light-blue)
+            }*/
       ],
-      editable: true,
+      weekNumbers: true,
+      weekNumbersWithinDays: true,
+      weekNumberCalculation: 'ISO',
+      editable: true, // this allows thing to be editable in the calendar
       droppable: true, // this allows things to be dropped onto the calendar !!!
       drop: function (date, allDay) { // this function is called when something is dropped
 
