--- a/DoctorWebASP/Views/HistoriaMedicas/AgregarHistorial.cshtml
+++ b/DoctorWebASP/Views/HistoriaMedicas/AgregarHistorial.cshtml
@@ -27,7 +27,7 @@
 
                 <tbody>
                     <tr>
-                        <td><label>Nombre completo:</label></td>
+                        <td><label>Nombre Completo:</label></td>
                         <td><input type="text" class="form-control"></td>
                     </tr>
                     <tr>
@@ -35,7 +35,7 @@
                         <td><text><input type="checkbox">Hombre</text>&nbsp;&nbsp;&nbsp;<text><input type="checkbox">Mujer</text></td>
                     </tr>
                     <tr>
-                        <td><label>Fecha de nacimiento:</label></td>
+                        <td><label>Fecha de Nacimiento:</label></td>
                         <td><text><input type="date" class="form-control"></text></td>
                     </tr>
                     <tr>
