Corrección de consultas para la creación

--- a/DoctorWebASP/Views/Calendarios/Index.cshtml
+++ b/DoctorWebASP/Views/Calendarios/Index.cshtml
@@ -16,6 +16,9 @@
                         <a href="Create">
                             <input type="button" class="btn btn-primary" value="Crear"/>
                         </a>
+                        <a href="Index">
+                            <input type="button" class="btn btn-primary col-md-offset-1" value="Sync" />
+                        </a>
                     </div>
                     <!-- /.box-body -->
                 </div>
