Mostrar citas agendadas en calendario médico

--- a/DoctorWebASP/Views/Calendarios/Index.cshtml
+++ b/DoctorWebASP/Views/Calendarios/Index.cshtml
@@ -197,8 +197,8 @@
       weekNumbers: true,
       weekNumbersWithinDays: true,
       weekNumberCalculation: 'ISO',
-      editable: true, // this allows thing to be editable in the calendar
-      droppable: true, // this allows things to be dropped onto the calendar !!!
+      editable: false, // this allows thing to be editable in the calendar
+      droppable: false, // this allows things to be dropped onto the calendar !!!
       drop: function (date, allDay) { // this function is called when something is dropped
 
         // retrieve the dropped element's stored Event Object
