--- a/DoctorWebASP/Views/AdmUsuario/Crearp.cshtml
+++ b/DoctorWebASP/Views/AdmUsuario/Crearp.cshtml
@@ -9,4 +9,7 @@
 
 <h5>Nombre </h5> <br /><input type="text" /> <br />
 
-<h5>Descripcion</h5>    <input type="text" /> <br />
+
+
+
+<a href=" " class="btn btn-primary pull-left">Crear Perfil</a>
