--- a/DoctorWebASP/Views/AdmUsuario/admrol.cshtml
+++ b/DoctorWebASP/Views/AdmUsuario/admrol.cshtml
@@ -5,8 +5,28 @@
 
 <h2>admrol</h2>
 
-<h1 style="text-align:center;"> Panel De Crear Usuarios</h1>
+<h1 style="text-align:center;"> Panel De Crear Roles de Usuarios</h1>
 
-<h5>Nombre </h5> <br /><input type="text" /> <br />
+<body>
 
-<h5>Descripcion</h5>    <input type="text" /> <br />
+    <br />
+    <form method="get" action="/AdmUsuario/crearpermiso">
+
+        <input type="submit" value="Crear Rol" />
+
+    </form>
+
+    <br />
+    
+    <br />
+    <form method="get" action="/AdmUsuario/eliminarpermiso">
+
+        <input type="submit" value="Eliminar Permiso" />
+
+    </form>
+
+    <br />
+
+    <asp:button id='btnBoton' runat='server' Text='ir atrás' />
+
+</body>
